// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dropdown is not visible if items fit 1`] = `
.c9 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  z-index: 1060;
}

.c2 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c4 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4.c4 {
  margin-right: 1.5rem;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4 + .bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c8 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding: 0 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c8:focus {
  outline: none;
}

.c8[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c8 + .bd-button {
  margin-top: 0.5rem;
}

.c8:active {
  background-color: #DBE3FE;
}

.c8:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c8:hover:not(:active) {
  background-color: #F0F3FF;
}

.c8[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c11 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c7 {
  position: relative;
}

.c6 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

.c0 {
  width: 200px;
}

@media (min-width:720px) {
  .c4 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c8 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c8 {
    width: auto;
  }
}

<div>
  <div
    class="c0"
    data-testid="wrapper"
  >
    <div
      class="c1 c2"
      data-testid="pilltabs-wrapper"
      role="list"
    >
      <div
        class="c1 c3 "
        data-testid="pilltabs-pill-0"
        role="listitem"
      >
        <button
          class="c4 "
        >
          <span
            class="c5"
          >
            In stock
          </span>
        </button>
      </div>
      <div
        class="c1 c3 c6"
        data-testid="pilltabs-dropdown-toggle"
      >
        <div
          class="c1 c7"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="bd-dropdown-3-label bd-dropdown-3-toggle-button"
            class="c8 bd-button"
            id="bd-dropdown-3-toggle-button"
          >
            <span
              class="c5"
            >
              <svg
                aria-labelledby="bd-icon-4"
                class="c9"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <title
                  id="bd-icon-4"
                >
                  add
                </title>
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
          </button>
          <div
            class="c10"
            style="position: absolute; left: 0px; top: 0px;"
          >
            <ul
              aria-labelledby="bd-dropdown-3-label"
              class="c11"
              id="bd-dropdown-3-menu"
              role="listbox"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders the given tabs 1`] = `
.c9 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  z-index: 1060;
}

.c2 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c4 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4.c4 {
  margin-right: 1.5rem;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4 + .bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c8 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding: 0 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c8:focus {
  outline: none;
}

.c8[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c8 + .bd-button {
  margin-top: 0.5rem;
}

.c8:active {
  background-color: #DBE3FE;
}

.c8:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c8:hover:not(:active) {
  background-color: #F0F3FF;
}

.c8[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c11 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c7 {
  position: relative;
}

.c6 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

.c0 {
  width: 200px;
}

@media (min-width:720px) {
  .c4 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c8 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c8 {
    width: auto;
  }
}

<div>
  <div
    class="c0"
    data-testid="wrapper"
  >
    <div
      class="c1 c2"
      data-testid="pilltabs-wrapper"
      role="list"
    >
      <div
        class="c1 c3 "
        data-testid="pilltabs-pill-0"
        role="listitem"
      >
        <button
          class="c4 "
        >
          <span
            class="c5"
          >
            In stock
          </span>
        </button>
      </div>
      <div
        class="c1 c3 c6"
        data-testid="pilltabs-dropdown-toggle"
      >
        <div
          class="c1 c7"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="bd-dropdown-1-label bd-dropdown-1-toggle-button"
            class="c8 bd-button"
            id="bd-dropdown-1-toggle-button"
          >
            <span
              class="c5"
            >
              <svg
                aria-labelledby="bd-icon-2"
                class="c9"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <title
                  id="bd-icon-2"
                >
                  add
                </title>
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
          </button>
          <div
            class="c10"
            style="position: absolute; left: 0px; top: 0px;"
          >
            <ul
              aria-labelledby="bd-dropdown-1-label"
              class="c11"
              id="bd-dropdown-1-menu"
              role="listbox"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`only the pills that fit are visible 1`] = `
.c9 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  z-index: 1060;
}

.c2 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c4 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4.c4 {
  margin-right: 1.5rem;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4 + .bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c8 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding: 0 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c8:focus {
  outline: none;
}

.c8[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c8 + .bd-button {
  margin-top: 0.5rem;
}

.c8:active {
  background-color: #DBE3FE;
}

.c8:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c8:hover:not(:active) {
  background-color: #F0F3FF;
}

.c8[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c11 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c7 {
  position: relative;
}

.c6 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

.c0 {
  width: 200px;
}

@media (min-width:720px) {
  .c4 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c8 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c8 {
    width: auto;
  }
}

<div>
  <div
    class="c0"
    data-testid="wrapper"
  >
    <div
      class="c1 c2"
      data-testid="pilltabs-wrapper"
      role="list"
    >
      <div
        class="c1 c3 "
        data-testid="pilltabs-pill-0"
        role="listitem"
      >
        <button
          class="c4 "
        >
          <span
            class="c5"
          >
            In stock
          </span>
        </button>
      </div>
      <div
        class="c1 c3 c6"
        data-testid="pilltabs-pill-1"
        role="listitem"
      >
        <button
          class="c4 "
          disabled=""
        >
          <span
            class="c5"
          >
            Filter 2
          </span>
        </button>
      </div>
      <div
        class="c1 c3 c6"
        data-testid="pilltabs-pill-2"
        role="listitem"
      >
        <button
          class="c4 "
          disabled=""
        >
          <span
            class="c5"
          >
            Filter 3
          </span>
        </button>
      </div>
      <div
        class="c1 c3 "
        data-testid="pilltabs-dropdown-toggle"
      >
        <div
          class="c1 c7"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="bd-dropdown-11-label bd-dropdown-11-toggle-button"
            class="c8 bd-button"
            id="bd-dropdown-11-toggle-button"
          >
            <span
              class="c5"
            >
              <svg
                aria-labelledby="bd-icon-12"
                class="c9"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <title
                  id="bd-icon-12"
                >
                  add
                </title>
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
          </button>
          <div
            class="c10"
            style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 4px);"
          >
            <ul
              aria-labelledby="bd-dropdown-11-label"
              class="c11"
              id="bd-dropdown-11-menu"
              role="listbox"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`only the pills that fit are visible 2 1`] = `
.c9 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  z-index: 1060;
}

.c2 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c4 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4.c4 {
  margin-right: 1.5rem;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4 + .bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c8 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding: 0 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c8:focus {
  outline: none;
}

.c8[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c8 + .bd-button {
  margin-top: 0.5rem;
}

.c8:active {
  background-color: #DBE3FE;
}

.c8:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c8:hover:not(:active) {
  background-color: #F0F3FF;
}

.c8[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c11 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c7 {
  position: relative;
}

.c6 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

.c0 {
  width: 200px;
}

@media (min-width:720px) {
  .c4 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c8 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c8 {
    width: auto;
  }
}

<div>
  <div
    class="c0"
    data-testid="wrapper"
  >
    <div
      class="c1 c2"
      data-testid="pilltabs-wrapper"
      role="list"
    >
      <div
        class="c1 c3 "
        data-testid="pilltabs-pill-0"
        role="listitem"
      >
        <button
          class="c4 "
        >
          <span
            class="c5"
          >
            In stock
          </span>
        </button>
      </div>
      <div
        class="c1 c3 "
        data-testid="pilltabs-pill-1"
        role="listitem"
      >
        <button
          class="c4 "
        >
          <span
            class="c5"
          >
            Filter 2
          </span>
        </button>
      </div>
      <div
        class="c1 c3 c6"
        data-testid="pilltabs-pill-2"
        role="listitem"
      >
        <button
          class="c4 "
          disabled=""
        >
          <span
            class="c5"
          >
            Filter 3
          </span>
        </button>
      </div>
      <div
        class="c1 c3 "
        data-testid="pilltabs-dropdown-toggle"
      >
        <div
          class="c1 c7"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="bd-dropdown-15-label bd-dropdown-15-toggle-button"
            class="c8 bd-button"
            id="bd-dropdown-15-toggle-button"
          >
            <span
              class="c5"
            >
              <svg
                aria-labelledby="bd-icon-16"
                class="c9"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <title
                  id="bd-icon-16"
                >
                  add
                </title>
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
          </button>
          <div
            class="c10"
            style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 4px);"
          >
            <ul
              aria-labelledby="bd-dropdown-15-label"
              class="c11"
              id="bd-dropdown-15-menu"
              role="listbox"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders all the filters if they fit 1`] = `
.c9 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  z-index: 1060;
}

.c2 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c4 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4.c4 {
  margin-right: 1.5rem;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4 + .bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c8 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding: 0 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c8:focus {
  outline: none;
}

.c8[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c8 + .bd-button {
  margin-top: 0.5rem;
}

.c8:active {
  background-color: #DBE3FE;
}

.c8:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c8:hover:not(:active) {
  background-color: #F0F3FF;
}

.c8[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c11 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c7 {
  position: relative;
}

.c6 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

.c0 {
  width: 200px;
}

@media (min-width:720px) {
  .c4 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c8 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c8 {
    width: auto;
  }
}

<div>
  <div
    class="c0"
    data-testid="wrapper"
  >
    <div
      class="c1 c2"
      data-testid="pilltabs-wrapper"
      role="list"
    >
      <div
        class="c1 c3 "
        data-testid="pilltabs-pill-0"
        role="listitem"
      >
        <button
          class="c4 "
        >
          <span
            class="c5"
          >
            In stock
          </span>
        </button>
      </div>
      <div
        class="c1 c3 "
        data-testid="pilltabs-pill-1"
        role="listitem"
      >
        <button
          class="c4 "
        >
          <span
            class="c5"
          >
            Filter 2
          </span>
        </button>
      </div>
      <div
        class="c1 c3 "
        data-testid="pilltabs-pill-2"
        role="listitem"
      >
        <button
          class="c4 "
        >
          <span
            class="c5"
          >
            Filter 3
          </span>
        </button>
      </div>
      <div
        class="c1 c3 c6"
        data-testid="pilltabs-dropdown-toggle"
      >
        <div
          class="c1 c7"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="bd-dropdown-9-label bd-dropdown-9-toggle-button"
            class="c8 bd-button"
            id="bd-dropdown-9-toggle-button"
          >
            <span
              class="c5"
            >
              <svg
                aria-labelledby="bd-icon-10"
                class="c9"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <title
                  id="bd-icon-10"
                >
                  add
                </title>
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
          </button>
          <div
            class="c10"
            style="position: absolute; left: 0px; top: 0px;"
          >
            <ul
              aria-labelledby="bd-dropdown-9-label"
              class="c11"
              id="bd-dropdown-9-menu"
              role="listbox"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders dropdown if items do not fit 1`] = `
.c9 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  z-index: 1060;
}

.c2 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c5 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c5.c5 {
  margin-right: 1.5rem;
}

.c5:focus {
  outline: none;
}

.c5[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c5 + .bd-button {
  margin-top: 0.5rem;
}

.c5:active {
  background-color: #DBE3FE;
}

.c5:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c5:hover:not(:active) {
  background-color: #F0F3FF;
}

.c5[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c8 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding: 0 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c8:focus {
  outline: none;
}

.c8[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c8 + .bd-button {
  margin-top: 0.5rem;
}

.c8:active {
  background-color: #DBE3FE;
}

.c8:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c8:hover:not(:active) {
  background-color: #F0F3FF;
}

.c8[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c6 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c11 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c7 {
  position: relative;
}

.c4 {
  position: absolute;
  visibility: hidden;
  z-index: -1070;
}

.c0 {
  width: 200px;
}

@media (min-width:720px) {
  .c5 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c5 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c8 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c8 {
    width: auto;
  }
}

<div>
  <div
    class="c0"
    data-testid="wrapper"
  >
    <div
      class="c1 c2"
      data-testid="pilltabs-wrapper"
      role="list"
    >
      <div
        class="c1 c3 c4"
        data-testid="pilltabs-pill-0"
        role="listitem"
      >
        <button
          class="c5 "
          disabled=""
        >
          <span
            class="c6"
          >
            In stock
          </span>
        </button>
      </div>
      <div
        class="c1 c3 c4"
        data-testid="pilltabs-pill-1"
        role="listitem"
      >
        <button
          class="c5 "
          disabled=""
        >
          <span
            class="c6"
          >
            Long filter name
          </span>
        </button>
      </div>
      <div
        class="c1 c3 "
        data-testid="pilltabs-dropdown-toggle"
      >
        <div
          class="c1 c7"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="bd-dropdown-5-label bd-dropdown-5-toggle-button"
            class="c8 bd-button"
            id="bd-dropdown-5-toggle-button"
          >
            <span
              class="c6"
            >
              <svg
                aria-labelledby="bd-icon-6"
                class="c9"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <title
                  id="bd-icon-6"
                >
                  add
                </title>
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
          </button>
          <div
            class="c10"
            style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 4px);"
          >
            <ul
              aria-labelledby="bd-dropdown-5-label"
              class="c11"
              id="bd-dropdown-5-menu"
              role="listbox"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
